--- a/trunk/android/huyenhoc/res/layout/main.xml
+++ b/trunk/android/huyenhoc/res/layout/main.xml
@@ -2,11 +2,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+    android:orientation="vertical" 
+    android:background="@drawable/background"
+    android:gravity="center_horizontal">
+    
+	<LinearLayout android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:padding="10dip"
+	    android:orientation="vertical">
+	    <EditText android:id="@+id/edt_name"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="@string/name"
+	        android:textColor="#7f0000"/>
+	    <com.candroid.huyenhoc.Text 
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="28px"
+	        android:text="@string/dateofbirth"
+	        android:textColor="#7f0000"/>
+	</LinearLayout>
+	
+	<LinearLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:background="@drawable/scroll_full">
+	    
+	</LinearLayout>
+	
+	<LinearLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<com.candroid.huyenhoc.Text 
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="28px"
+	        android:text="@string/male"
+	        android:textColor="#7f0000"
+	        android:layout_weight="1"/>
+		<com.candroid.huyenhoc.Text 
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="28px"
+	        android:text="@string/female"
+	        android:textColor="#7f0000"
+	        android:layout_weight="1"/>	    
+	</LinearLayout>
 
 </LinearLayout>
