--- a/trunk/android/huyenhoc/res/layout/main.xml
+++ b/trunk/android/huyenhoc/res/layout/main.xml
@@ -2,53 +2,107 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
     android:background="@drawable/background"
-    android:gravity="center_horizontal">
-    
-	<LinearLayout android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:padding="10dip"
-	    android:orientation="vertical">
-	    <EditText android:id="@+id/edt_name"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:hint="@string/name"
-	        android:textColor="#7f0000"/>
-	    <com.candroid.huyenhoc.Text 
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:textSize="28px"
-	        android:text="@string/dateofbirth"
-	        android:textColor="#7f0000"/>
-	</LinearLayout>
-	
-	<LinearLayout 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal"
-		android:background="@drawable/scroll_full">
-	    
-	</LinearLayout>
-	
-	<LinearLayout 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
-		<com.candroid.huyenhoc.Text 
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:textSize="28px"
-	        android:text="@string/male"
-	        android:textColor="#7f0000"
-	        android:layout_weight="1"/>
-		<com.candroid.huyenhoc.Text 
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:textSize="28px"
-	        android:text="@string/female"
-	        android:textColor="#7f0000"
-	        android:layout_weight="1"/>	    
-	</LinearLayout>
+    android:gravity="center_horizontal"
+    android:orientation="vertical" 
+    android:padding="3px">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="7dip"
+        android:layout_weight="1" >
+
+        <EditText
+            android:id="@+id/edtName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/name"
+            android:singleLine="true"
+            android:textColor="#7f0000" />
+
+        <com.candroid.huyenhoc.Text
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/dateofbirth"
+            android:textColor="#7f0000"
+            android:textSize="28dip" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/scroll_full"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <com.candroid.huyenhoc.Text
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/male"
+                android:textColor="#7f0000"
+                android:textSize="50dip" />
+
+            <com.candroid.huyenhoc.Text
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/female"
+                android:textSize="50dip" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <com.candroid.huyenhoc.Text
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/hourborn"
+                android:textColor="#7f0000"
+                android:textSize="24dip" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/scroll_full"
+        android:orientation="horizontal" 
+        android:layout_weight="1">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal" >
+
+        <com.candroid.huyenhoc.Btn
+            android:id="@+id/btnFinish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/hoan_thanh_button"
+            android:text="@string/btnfinish"
+            android:textColor="#fff"
+            android:textSize="24dip" />
+    </LinearLayout>
 
 </LinearLayout>
