--- a/trunk/android/huyenhoc/res/layout/childmenu.xml
+++ b/trunk/android/huyenhoc/res/layout/childmenu.xml
@@ -34,6 +34,9 @@
         android:layout_height="0dip"
         android:background="@drawable/table_background"
         android:layout_weight="8" >
+        <ListView android:id="@+id/lstChildMenu"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <LinearLayout
