--- a/trunk/android/huyenhoc/res/layout/options.xml
+++ b/trunk/android/huyenhoc/res/layout/options.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/background1"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -34,11 +34,11 @@
         android:layout_height="0dip"
         android:layout_weight="8"
         android:id="@+id/btnOptions" >
-        <LinearLayout
+        <ImageView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/option_full_background" >
-        </LinearLayout>
+            android:layout_height="fill_parent" android:scaleType="center"
+            android:src="@drawable/cuthe" >
+        </ImageView>
     </LinearLayout>
 
     <LinearLayout
