--- a/trunk/android/huyenhoc/res/layout/details.xml
+++ b/trunk/android/huyenhoc/res/layout/details.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
+            android:id="@+id/txtcap"
             android:text="Cuộc sống"
             android:textColor="#fff"
             android:textSize="40dip" />
