--- a/trunk/android/huyenhoc/res/layout/main.xml
+++ b/trunk/android/huyenhoc/res/layout/main.xml
@@ -87,6 +87,7 @@
             android:orientation="horizontal" >
 
             <com.candroid.huyenhoc.Text
+                android:id="@+id/txtMale"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -96,12 +97,14 @@
                 android:gravity="center"/>
 
             <com.candroid.huyenhoc.Text
+                android:id="@+id/txtFemale"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/female"
                 android:textSize="50dip"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="#ccc" />
         </LinearLayout>
 
         <LinearLayout
@@ -130,6 +133,7 @@
         android:paddingRight="20dip" >
 
         <TextView
+            android:id="@+id/txtHourofbirth"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -140,6 +144,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/txtMinuteofbirth"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -150,6 +155,7 @@
             android:textStyle="bold" />
 
         <com.candroid.huyenhoc.Text
+            android:id="@+id/txtLunarHourofbith"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:layout_weight="2"
